# pinpoint-cpp-agent

./: .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CMakePresets.json  LICENSE  MODULE.bazel  NOTICE  README.md  WORKSPACE  conanfile.txt  incr_buildnumber.sh  vcpkg.json  version.h.in
.github/workflows/: release.yml
cmake/: toolchain.cmake
doc/: build.md  config.md  examples.md  http_filtering.md  instrument.md  instrument_c.md  quick_start.md  sampling.md  trouble_shooting.md  troubleshooting.md
example/: BUILD  CMakeLists.txt  db_demo.cpp  docker-compose.yml  http_server.cpp  http_server_c.c  http_trace_context.h  httplib_c.cpp  httplib_c.h  run_db_demo_with_docker.sh  test_db_demo.sh  tutorial.cpp  tutorial_c.c  url_stat_test.cpp  web_demo.cpp
example/cpptrace_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  cpptrace_demo.cpp  docker-compose.yml  pinpoint-config.yaml
example/curl_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  curl_web_example.cpp  docker-compose.yml
example/grpc_demo/: BUILD.bazel  CMakeLists.txt  grpc_server.cpp  pinpoint_grpc_context.h
example/kafka_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  docker-compose.yml  kafka_web_producer.cpp  producer.cpp
example/mongodb_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  docker-compose.yml
example/mysql_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  db_demo.cpp  docker-compose.yml  pinpoint-config.yaml  run_db_demo_with_docker.sh
example/redis_demo/: BUILD.bazel  CMakeLists.txt  Dockerfile  docker-compose.yml
example/todolist/: BUILD.bazel  CMakeLists.txt  docker-compose.yml  schema.sql  start_services.sh  test.sh  todolist_server.cpp
export/: CMakeLists.txt  README.md  example.c  pinpoint_c.cpp  pinpoint_c.h
export/civetweb_example/: CMakeLists.txt  README.md  civetweb_example.c  pinpoint-config.yaml
include/pinpoint/: tracer.h  tracer_c.h
scripts/: grpc_protobuf.supp  run_valgrind_it_test.sh  run_valgrind_tests.sh  test_send_span_batch.sh
src/: agent.cpp  agent.h  agent_service.h  annotation.cpp  annotation.h  atomic_shared_ptr.h  cache.cpp  cache.h  callstack.h  config.cpp  config.h  grpc.cpp  grpc.h  grpc_builders.cpp  grpc_builders.h  http.cpp  http.h  limiter.cpp  limiter.h  logging.cpp  logging.h  noop.cpp  noop.h  object_name.cpp  object_name.h  sampling.cpp  sampling.h  span.cpp  span.h  span_event.cpp  span_event.h  sql.cpp  sql.h  stat.cpp  stat.h  tracer_c.cpp  url_stat.cpp  url_stat.h  utility.cpp  utility.h  (+1 more)
test/: BUILD  CMakeLists.txt  mock_agent_service.h  mock_helpers.h  test_agent_with_mocks.cpp  test_annotation.cpp  test_cache.cpp  test_callstack.cpp  test_config.cpp  test_grpc.cpp  test_grpc_with_mocks.cpp  test_http.cpp  test_limiter.cpp  test_logging.cpp  test_noop.cpp  test_object_name.cpp  test_sampling.cpp  test_span.cpp  test_span_event.cpp  test_sql.cpp  test_stat.cpp  test_tracer_c.cpp  test_url_stat.cpp  test_utility.cpp
test/it_test/: BUILD  CMakeLists.txt  docker-compose.yml  grpc_server.cpp  init.sql  it_test.sh  it_test_server.cpp  pinpoint-config.yaml  pinpoint_grpc_context.h  pinpoint_grpc_interceptors.h
v1/: BUILD
