package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2

genrule(
    name = "generate_version_h",
    srcs = [
        "MODULE.bazel",
        "build_number.txt",
    ],
    outs = ["version.h"],
    cmd = """
        VERSION=$$(grep 'version = ' $(location MODULE.bazel) | head -1 | sed 's/.*version = "\\(.*\\)".*/\\1/')
        MAJOR=$$(echo $$VERSION | cut -d. -f1)
        MINOR=$$(echo $$VERSION | cut -d. -f2)
        PATCH=$$(echo $$VERSION | cut -d. -f3)
        BUILD=$$(cat $(location build_number.txt) | tr -d '[:space:]')
        cat > $@ <<EOF
#pragma once

#define VERSION_STRING  "$$VERSION.$$BUILD"
#define VERSION_MAJOR "$$MAJOR"
#define VERSION_MINOR "$$MINOR"
#define VERSION_PATCH "$$PATCH"
#define BUILD_NUMBER "$$BUILD"
EOF
    """,
)

cc_library(
    name = "version",
    hdrs = [":generate_version_h"],
    include_prefix = "",
    strip_include_prefix = "",
)

cc_library(
    name = "pinpoint-cpp",
    srcs = glob(["src/*.cpp", "src/*.h"]),
    hdrs = [
        "include/pinpoint/tracer.h",
        "include/pinpoint/tracer_c.h",
    ],
    includes = [
        "3rd_party",
        "include",
    ],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        ":version",
        "//3rd_party:murmur_hash3",
        "//v1:annotation_grpc_cc",
        "//v1:cmd_grpc_cc",
        "//v1:service_grpc_cc",
        "//v1:span_grpc_cc",
        "//v1:stat_grpc_cc",
        "//v1:thread_dump_grpc_cc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp",
        "@com_google_absl//absl/strings",
        "@fmt",
    ],
)
